--- a/backend/package.json
+++ b/backend/package.json
@@ -13,18 +13,18 @@
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
-    "archiver": "^6.0.2",
+    "archiver": "^7.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^4.19.2",
-    "multer": "^1.4.5-lts.1",
+    "multer": "^2.0.2",
     "winston": "^3.14.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/multer": "^1.4.12",
+    "@types/multer": "^2.0.0",
     "@types/node": "^20.12.7",
     "prisma": "^5.22.0",
     "tsx": "^4.7.1",
