--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.0",
     "react-dropzone": "^14.2.3",
-    "react-markdown": "^9.0.1"
+    "react-markdown": "^9.0.1",
+    "dompurify": "^3.2.2"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
